# dualsense-mac-mapper

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  dualsense-mac-mapper.py
legacy-python/: README.md  dualsense-mac-mapper.py
rust/: Cargo.toml  README.md  config.example.json  tauri.conf.json
rust/capabilities/: default.json
rust/examples/: maple_artale.json
rust/src/: app.rs  config.rs  config_io.rs  engine.rs  gamepad.rs  keyboard.rs  lib.rs  macro_engine.rs  main.rs  mapper.rs  mouse.rs  safety.rs
rust/src/gamepad/: cursor_params.rs  ds_protocol.rs  events.rs  hid_source.rs  mod.rs
rust/src/gui/: commands.rs  events.rs  file_watcher.rs  mod.rs  runtime.rs  tray.rs  ui_prefs.rs
rust/tests/: cmd_macros.rs  cmd_set_binding.rs  cmd_settings.rs  config_io.rs  engine_handle.rs  example_config_validates.rs  hid_source_state_machine.rs  key_normalisation.rs  macro_writes_update_engine_in_memory.rs  mouse_binding_e2e.rs  mouse_sink_safety.rs  panic_release.rs
rust/tests/test_helpers/: mod.rs
rust/web/: activity.js  app.js  bind_popup.js  capture_state.js  controller.js  controller_geom.generated.js  index.html  ipc.js  key_capture.js  keyboard_mirror.js  macros.js  mappings.js  palette.css  settings.js  solarized.css  style.css
scripts/: build_icons.py  build_silhouette_preview.py  gen_controller_constants.py  icon_variants.py  palette_mockup.py  trace_all.py  trace_share_options.py
tools/: controller_tuner.html
